# Copyright (C) 2015 Yuwu Xiong <sansidee@foxmail.com>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AC_INIT(reconf)
AC_CANONICAL_HOST
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(tstool,0.1.09)
AC_C_BIGENDIAN
AC_PROG_CC
AC_STDC_HEADERS
AC_PROG_RANLIB
AC_OUTPUT(Makefile \
          doc/Makefile \
          m4/Makefile  \
          src/Makefile \
         )
