# Copyright (C) 2004 Yuwu (Bruin) Xiong <xiongyw@hotmail.com>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
bin_PROGRAMS = tstool
tstool_SOURCES = main.c libsi.c save_html.c si.c tree.c 13818-1.h libsi.h save_html.h si.h tree.h packet_id.h table_id.h desc_id.h section_filter.h section_filter.c

